THRIFT-1214 JavaScript constructor does not accept object properties Patch: Henrique Mendonca

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1138013 13f79535-47bb-0310-9956-ffa450edef68